# adventure_rs

./: Cargo.toml  README.md
game_actor/: Cargo.toml
game_actor/src/: lib.rs
game_actor/src/game_actor_derive/: Cargo.toml
game_actor/src/game_actor_derive/src/: lib.rs
src/: adventurer.rs  enemy.rs  item.rs  lib.rs  main.rs
